[feat] scrapy selenium

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -15,6 +15,8 @@ pylint-django = "*"
 scrapy = "*"
 django-environ = "*"
 scrapy-djangoitem = "*"
+selenium = "*"
+word2number = "*"
 
 [dev-packages]
 pylint = "*"
