--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,7 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "babel-eslint": "^10.1.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
