--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.19",
+    "@types/material-ui": "^0.21.8",
     "@types/node": "^12.19.9",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
@@ -15,9 +19,11 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.21.0",
+    "chart.js": "^2.9.4",
     "date-fns": "^2.16.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
