--- a/requirements.txt
+++ b/requirements.txt
@@ -2,36 +2,34 @@ asgiref==3.3.1
 astroid==2.4.2
 attrs==20.3.0
 Automat==20.2.0
-certifi==2020.12.5
 cffi==1.14.4
-chardet==4.0.0
 constantly==15.1.0
 cryptography==3.3.1
 cssselect==1.1.0
 dj-database-url==0.5.0
-Django==3.1.4
+Django==3.1.5
 django-cors-headers==3.6.0
 django-environ==0.4.5
 django-heroku==0.3.1
-django-rest-knox==4.1.0
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
+fake-useragent==0.1.11
 gunicorn==20.0.4
 hyperlink==20.0.1
-idna==2.10
+idna==3.0
 incremental==17.5.0
-isort==5.6.4
+isort==5.7.0
 itemadapter==0.2.0
 itemloaders==1.0.4
 jmespath==0.10.0
 lazy-object-proxy==1.4.3
 lxml==4.6.2
 mccabe==0.6.1
+numpy==1.19.4
+pandas==1.2.0
 parsel==1.6.0
-Pillow==8.0.1
 Protego==0.1.16
 psycopg2==2.8.6
-psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
@@ -42,9 +40,9 @@ pylint==2.6.0
 pylint-django==2.3.0
 pylint-plugin-utils==0.6
 pyOpenSSL==20.0.1
-pytz==2020.4
+python-dateutil==2.8.1
+pytz==2020.5
 queuelib==1.5.0
-requests==2.25.1
 Scrapy==2.4.1
 scrapy-djangoitem==1.1.1
 selenium==3.141.0
